--- a/css/styel.css
+++ b/css/styel.css
@@ -76,7 +76,7 @@ main {
 /*----------------------- right section --------------------*/
 .right-container {
   display: flex;
-  position: relative;
+  /* position: relative; */
   width: 60vw;
 }
 .heading {
@@ -236,4 +236,149 @@ main {
 }
 .arrow > img {
   width: 30px;
+}
+/* media query */
+
+@media only screen and (max-width: 1148px) {
+  .img {
+    width: 300px;
+  }
+}
+
+@media only screen and (max-width: 1041px) {
+  .left-image-container {
+    display: none;
+  }
+  main {
+    justify-content: center;
+  }
+  .main-image {
+    width: 100vw;
+  }
+  .main-image > img {
+    width: 100%;
+  }
+  .heading {
+    position: absolute;
+    left: 10%;
+    top: 100px;
+  }
+}
+
+@media only screen and (min-width: 1042px) {
+  .main-image {
+    display: none;
+  }
+  .right-container {
+    position: relative;
+  }
+}
+
+@media only screen and (max-width: 925px) {
+  .social-icons {
+    right: 0 !important;
+  }
+}
+
+@media only screen and (max-width: 880px) {
+  .right-container {
+    width: 100vw;
+  }
+  .social-icons {
+    right: 20px;
+  }
+  .heading h1 {
+    font-size: 3rem;
+  }
+  .heading div h1::after {
+    content: "";
+    width: 10px;
+    height: 10px;
+  }
+  .heading > h1::after {
+    content: "";
+    width: 20px;
+    height: 5px;
+    display: inline-block;
+    border: 2px solid #898888;
+    margin-bottom: 25px;
+  }
+  .heading div {
+    margin-left: 80px;
+    margin-top: -20px;
+  }
+  .heading div p {
+    padding-left: 20px;
+    font-size: 1.2rem;
+  }
+  .right-container .btn-wrapper {
+    left: -30px;
+    top: 180px;
+  }
+  .navbar-container .navbar {
+    height: 12vh;
+  }
+  .bottom {
+    left: 10px;
+  }
+
+  .bottom ul li {
+    font-size: 0.8rem;
+  }
+  .quote-icon .fa-quote-right {
+    font-size: 16px;
+  }
+  .bottom ul li span {
+    width: 10px;
+    height: 10px;
+  }
+  .bottom .line-dot {
+    left: 4px;
+    top: 17px;
+  }
+  .img {
+    width: 200px;
+  }
+  .bottom-quote {
+    left: 220px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .arrow {
+    display: none;
+  }
+  .social-icons {
+    top: 110px;
+  }
+
+  .bottom {
+    color: #ffffff;
+  }
+
+  .navbar-container .navbar {
+    padding: 0 10px;
+  }
+  .logo {
+    margin-right: 40px;
+  }
+  .navbar-container .navbar .list {
+    gap: 40px;
+  }
+  .navbar-container .navbar .list .list-item {
+    width: 70px;
+  }
+  .navbar-container .navbar .list .list-item:last-child {
+    margin-right: 40px;
+  }
+  .right-container .btn-wrapper {
+    right: 0;
+    left: 0px;
+  }
+  .right-container .btn-wrapper button {
+    padding: 17px 40px;
+  }
+  .heading {
+    margin-left: 8px;
+  }
 }
